--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-
-    <script src="script.js"></script>
+    <div class="wrapper">
+        <div class="box"></div>
+        <div class="box this"></div>
+        <div class="box"></div>
+    </div>
+    <script src="script1.js"></script>
 </body>
 </html>
